# stenography-brief-voter

./: README.md  jest  jest.config.babel.js  jest.config.js  jest.config.mjs  jest.setup.js  knexfile.js  knexfile.ts  main.py  next.config.js  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  server.js
app/: layout.tsx  page-with-add-word.tsx  page.tsx
app/actions/: stripe.ts
app/api/chat/: route.ts
app/api/stripe-test/: route.ts
app/api/words/: route.ts
app/create-theory/: page.tsx
app/dashboard/: page.tsx
app/login/: page.tsx
app/payment-success/: page.tsx
app/pricing/: error.tsx  page.tsx
app/word/[id]/: page.tsx
components/: Chatbot.tsx  add-word-button.tsx  analytics-dashboard.tsx  create-brief-button.tsx  custom-theory-creator.tsx  export-briefs.tsx  practice-drill-creator.tsx  premium-badge.tsx  premium-feature.tsx  pricing-table.tsx  stripe-checkout-form.tsx  stripe-debug.tsx  suggest-brief-dialog.tsx  theory-index.tsx  user-account-nav.tsx  word-list.tsx
db/: db .js  knexfile.js
db/seeds/: 0-clean .js  votes .js
lib/: db.js  prisma.js  stripe.ts
lib/db/: connection.js  connection.ts  db.js  dev.sqlite3  index.js  knexfile.js  next-connection.js  test-db.js
lib/db/__tests__/: db.test.js
lib/db/migrations/: 20221130030847_comments.js  20221130030913_profiles.js  20221130031949_books.js  20250508103729_create_brief-votes_table.js  20250508112016_words_table.js
lib/db/seeds/: 0-clean .js  (+6 more)
mcp_chatbot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
prisma/: schema.prisma
tests/: db.test.ts
(+1 files in other folders)
