[project]
name = "mcp-chatbot"
version = "0.1.0"
description = "AICE chatbot"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "fastembed>=0.6.1",
    "langchain-core>=0.3.60",
    "langchain-google-genai>=2.1.4",
    "mcp-use>=1.2.8",
    "streamlit>=1.45.0",
    "watchdog>=6.0.0",
]